tests/lean/cls_err.lean.expected.out
cls_err.lean:13:2: error: failed to synthesize type class instance for
A : Type u
⊢ H A
